--- a/friendly/index.html
+++ b/friendly/index.html
@@ -114,49 +114,56 @@
 
   <label>召喚するMOBを選択：</label>
   <select id="mobSelect">
-<label>召喚するMOBを選択：</label>
-<select id="mobSelect">
-  <option value="">選択してください</option>
+    <option value="">選択してください</option>
 
-  <!--  オーバーワールド（地上） -->
-  <option disabled>―― オーバーワールド（地上） ――</option>
-  <option value="allay">アレイ</option>
-  <option value="armadillo">アルマジロ</option>
-  <option value="cat">猫</option>
-  <option value="chicken">ニワトリ</option>
-  <option value="cow">牛</option>
-  <option value="goat">ヤギ</option>
-  <option value="sheep">羊</option>
-  <option value="sniffer">スニッファー</option>
-  <option value="fox">キツネ</option>
-  <option value="horse">馬</option>
-  <option value="donkey">ロバ</option>
-  <option value="rabbit">ウサギ</option>
-  <option value="parrot">オウム</option>
-  <option value="bee">蜂</option>
-  <option value="pig">豚</option>
-  <option value="panda">パンダ</option>
-  <option value="villager">村人</option>
-  <option value="wandering_trader">行商人</option>
-  <option value="trader_llama">行商人のラマ</option>
-  <option value="llama">ラマ</option>
-  <option value="wolf">オオカミ</option>
-  <option value="iron_golem">アイアンゴーレム</option>
-  <option value="snow_golem">スノーゴーレム</option>
-  <option value="mooshroom">ムーシュルーム</option>
+    <!-- オーバーワールド -->
+    <option disabled>―― オーバーワールド ――</option>
+    <option value="allay">アレイ</option>
+    <option value="cow">牛</option>
+    <option value="wolf">オオカミ</option>
+    <option value="chicken">ニワトリ</option>
+    <option value="horse">馬</option>
+    <option value="donkey">ロバ</option>
+    <option value="llama">ラマ</option>
+    <option value="fox">キツネ</option>
+    <option value="cat">猫</option>
+    <option value="sheep">羊</option>
+    <option value="pig">豚</option>
+    <option value="goat">ヤギ</option>
+    <option value="armadillo">アルマジロ</option>
+    <option value="rabbit">ウサギ</option>
+    <option value="villager">村人</option>
+    <option value="panda">パンダ</option>
+    <option value="mooshroom">ムーシュルーム</option>
+    <option value="sniffer">スニッファー</option>
 
-  <!--  水中（海 / 川） -->
-  <option disabled>―― 水中 ――</option>
-  <option value="axolotl">ウーパールーパー</option>
-  <option value="salmon">サケ</option>
-  <option value="cod">タラ</option>
-  <option value="dolphin">イルカ</option>
-  <option value="pufferfish">フグ</option>
-  <option value="tropical_fish">熱帯魚</option>
-  <option value="turtle">カメ</option>
-  <option value="frog">カエル</option>
-  <option value="tadpole">オタマジャクシ</option>
+    <!-- 水中 -->
+    <option disabled>―― 水中 ――</option>
+    <option value="cod">タラ</option>
+    <option value="salmon">サケ</option>
+    <option value="tropical_fish">熱帯魚</option>
+    <option value="pufferfish">フグ</option>
+    <option value="dolphin">イルカ</option>
+    <option value="axolotl">ウーパールーパー</option>
+    <option value="turtle">カメ</option>
 
+    <!-- ネザー -->
+    <option disabled>―― ネザー ――</option>
+    <option value="strider">ストライダー</option>
+
+    <!-- エンド -->
+    <option disabled>―― エンド ――</option>
+    <option value="endermite">エンダーマイト</option>
+
+    <!-- その他 -->
+    <option disabled>―― その他 ――</option>
+    <option value="parrot">オウム</option>
+    <option value="bee">蜂</option>
+    <option value="frog">カエル</option>
+    <option value="tadpole">オタマジャクシ</option>
+    <option value="wandering_trader">行商人</option>
+    <option value="trader_llama">行商人のラマ</option>
+    <option value="snow_golem">スノーゴーレム</option>
 
   </select>
 
@@ -197,4 +204,3 @@ function copyCommand() {
 
 </body>
 </html>
-
