--- a/special/index.html
+++ b/special/index.html
@@ -143,10 +143,14 @@
   <option value="kill_breeze">ブリーズを倒す</option>
 
   <!--  天気コマンド -->
-  <option disabled>―― 天気コマンド ――</option>
-  <option value="weather_clear">天気：晴れ固定</option>
-  <option value="weather_rain">天気：雨固定（※雪バイオームで雪）</option>
-
+  <option disabled>―― 天気 ――</option>
+  <option value="weather_clear">天気：晴れ</option>
+  <option value="weather_rain">天気：雨</option>
+  <option value="weather_thunder">天気：雷雨</option>
+  <option value="weather_lock_clear">天気：晴れ固定</option>
+  <option value="weather_lock_rain">天気：雨固定</option>
+  <option value="weather_lock_thunder">天気：雷雨固定</option>
+  <option value="weather_cycle_start">天気サイクル再開</option>
 
   <!--  時間コマンド -->
   <option disabled>―― 時間コマンド ――</option>
@@ -158,7 +162,6 @@
   <option value="time_start">昼夜サイクル再開</option>
 
 </select>
-
 
   <button class="button" onclick="generateCommand()">コマンド生成</button>
 
@@ -229,10 +232,31 @@ function generateCommand() {
       break;
 
     case "weather_clear":
+      cmd = `/weather clear`;
+      break;
+
+    case "weather_rain":
+      cmd = `/weather rain`;
+      break;
+
+    case "weather_thunder":
+      cmd = `/weather thunder`;
+      break;
+
+    case "weather_lock_clear":
       cmd = `/weather clear\n/gamerule doWeatherCycle false`;
       break;
-    case "weather_rain":
+
+    case "weather_lock_rain":
       cmd = `/weather rain\n/gamerule doWeatherCycle false`;
+      break;
+
+    case "weather_lock_thunder":
+      cmd = `/weather thunder\n/gamerule doWeatherCycle false`;
+      break;
+
+    case "weather_cycle_start":
+      cmd = `/gamerule doWeatherCycle true`;
       break;
 
     case "time_day":
@@ -267,7 +291,7 @@ function copyCommand(){
 
   const temp = document.createElement("textarea");
   temp.value = text;
-  document.body.appendChild(temp);
+  document.body.append.appendChild(temp);
   temp.select();
   document.execCommand("copy");
   document.body.removeChild(temp);
@@ -278,5 +302,3 @@ function copyCommand(){
 
 </body>
 </html>
-
-
