--- a/enemy/index.html
+++ b/enemy/index.html
@@ -115,57 +115,59 @@
   <select id="mobSelect">
     <option value="">選択してください</option>
 
-    <!--  オーバーワールド -->
-    <option disabled>―― オーバーワールド ――</option>
-    <option value="illusioner">イリュージョナー</option>
-    <option value="evoker">エヴォーカー</option>
-    <option value="elder_guardian">エルダーガーディアン</option>
-    <option value="endermite">エンダーマイト</option>
-    <option value="creeper">クリーパー</option>
-    <option value="cave_spider">洞窟グモ</option>
-    <option value="killer_rabbit">殺人ウサギ</option>
-    <option value="silverfish">シルバーフィッシュ</option>
-    <option value="slime_large">スライム(大)</option>
-    <option value="slime_mid">スライム(中)</option>
-    <option value="slime_small">スライム(小)</option>
-    <option value="skeleton">スケルトン</option>
-    <option value="skeleton_rider">スケルトンライダー</option>
-    <option value="spider_jockey">スパイダージョッキー</option>
-    <option value="stray">ストレイ</option>
-    <option value="zombie_villager">村人ゾンビ</option>
-    <option value="pillager">ピリジャー</option>
-    <option value="vindicator">ヴィンディケーター</option>
-    <option value="vex">ヴェックス</option>
-    <option value="witch">ウィッチ</option>
-    <option value="husk">ハスク</option>
-    <option value="phantom">ファントム</option>
-    <option value="ravager">ラヴェジャー</option>
+<!--  オーバーワールド -->
+<option disabled>―― オーバーワールド ――</option>
+<option value="illusioner">イリュージョナー</option>
+<option value="evoker">エヴォーカー</option>
+<option value="elder_guardian">エルダーガーディアン</option>
+<option value="endermite">エンダーマイト</option>
+<option value="creeper">クリーパー</option>
+<option value="cave_spider">洞窟グモ</option>
+<option value="killer_rabbit">殺人ウサギ</option>
+<option value="silverfish">シルバーフィッシュ</option>
+<option value="slime_large">スライム(大)</option>
+<option value="slime_mid">スライム(中)</option>
+<option value="slime_small">スライム(小)</option>
+<option value="skeleton">スケルトン</option>
+<option value="skeleton_rider">スケルトンライダー</option>
+<option value="spider_jockey">スパイダージョッキー</option>
+<option value="stray">ストレイ</option>
+<option value="zombie_villager">村人ゾンビ</option>
+<option value="pillager">ピリジャー</option>
+<option value="vindicator">ヴィンディケーター</option>
+<option value="vex">ヴェックス</option>
+<option value="witch">ウィッチ</option>
+<option value="husk">ハスク</option>
+<option value="phantom">ファントム</option>
+<option value="ravager">ラヴェジャー</option>
 
-    <!--  水中 -->
-    <option disabled>―― 水中 ――</option>
-    <option value="guardian">ガーディアン</option>
-    <option value="elder_guardian">エルダーガーディアン</option>
-    <option value="drowned">ドラウンド</option>
+<!--  水中 -->
+<option disabled>―― 水中 ――</option>
+<option value="drowned">ドラウンド</option>
+<option value="elder_guardian">エルダーガーディアン</option>
+<option value="guardian">ガーディアン</option>
 
-    <!--  ネザー -->
-    <option disabled>―― ネザー ――</option>
-    <option value="blaze">ブレイズ</option>
-    <option value="breeze">ブリーズ</option>
-    <option value="bogged">ボグド</option>
-    <option value="hoglin">ホグリン</option>
-    <option value="zoglin">ゾグリン</option>
-    <option value="piglin_brute">ピグリンブルート</option>
-    <option value="magma_large">マグマキューブ(大)</option>
-    <option value="magma_mid">マグマキューブ(中)</option>
-    <option value="magma_small">マグマキューブ(小)</option>
-    <option value="ghast">ガスト</option>
-    <option value="wither_skeleton">ウィザースケルトン</option>
+<!--  ネザー -->
+<option disabled>―― ネザー ――</option>
+<option value="blaze">ブレイズ</option>
+<option value="breeze">ブリーズ</option>
+<option value="bogged">ボグド</option>
+<option value="ghast">ガスト</option>
+<option value="hoglin">ホグリン</option>
+<option value="zoglin">ゾグリン</option>
+<option value="piglin_brute">ピグリンブルート</option>
+<option value="magma_large">マグマキューブ(大)</option>
+<option value="magma_mid">マグマキューブ(中)</option>
+<option value="magma_small">マグマキューブ(小)</option>
+<option value="wither_skeleton">ウィザースケルトン</option>
 
-    <!-- ▼ エンド -->
-    <option disabled>―― エンド ――</option>
-    <option value="dragon">エンダードラゴン</option>
-    <option value="shulker">シュルカー</option>
-    <option value="endermite">エンダーマイト</option>
+<!--  エンド -->
+<option disabled>―― エンド ――</option>
+<option value="dragon">エンダードラゴン</option>
+<option value="endermite">エンダーマイト</option>
+<option value="shulker">シュルカー</option>
+
+
   </select>
 
   <label>距離設定：</label>
@@ -371,4 +373,5 @@ function copyCommand(){
 
 </body>
 </html>
+
 
