--- a/items/index.html
+++ b/items/index.html
@@ -159,7 +159,6 @@
 <option value="oak_log">オークの原木</option>
 <option value="scaffolding">足場</option>
 <option value="glass">ガラス</option>
-<option value="hay_block">小麦の俵</option>
 <option value="ladder">はしご</option>
 <option value="white_wool">白の羊毛</option>
 <option value="white_carpet">白色のカーペット</option>
@@ -261,8 +260,7 @@ function toggleAmount() {
     "enchanted_golden_apple","glass","scaffolding","ladder",
     "white_wool","white_carpet","sugar_cane","gold_ingot",
     "diamond","copper_ingot","redstone","amethyst_shard",
-    "lapis_lazuli","netherite_scrap","arrow","hay_block",
-    "snowball","book"
+    "lapis_lazuli","netherite_scrap","arrow","snowball","book"
   ];
 
   if (item === "ender_pearl") {
@@ -397,6 +395,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
