--- a/items/index.html
+++ b/items/index.html
@@ -260,7 +260,8 @@ function toggleAmount() {
     "enchanted_golden_apple","glass","scaffolding","ladder",
     "white_wool","white_carpet","sugar_cane","gold_ingot",
     "diamond","copper_ingot","redstone","amethyst_shard",
-    "lapis_lazuli","netherite_scrap","arrow","snowball","book"
+    "lapis_lazuli","netherite_scrap","arrow","hay_block"
+    "snowball","book"
   ];
 
   if (item === "ender_pearl") {
@@ -395,6 +396,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
