--- a/enemy/index.html
+++ b/enemy/index.html
@@ -242,7 +242,7 @@ function generateHostile() {
       break;
 
     case "vex":
-      cmd = `execute at @p run summon vex ~ ~2 ~${dist} {CustomName:'{"text":"{nickname}"}',PersistenceRequired:1,CustomNameVisible:1,HandItems:[{Count:1,id:"minecraft:bow"},{}]};
+      cmd = `execute at @p run summon vex ~ ~2 ~${dist} {CustomName:'{"text":"{nickname}"}',PersistenceRequired:1,CustomNameVisible:1,HandItems:[{Count:1,id:"minecraft:iron_sword"},{}]};
       break;
 
     case "evoker":
@@ -377,6 +377,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
