--- a/items/index.html
+++ b/items/index.html
@@ -45,6 +45,7 @@
   .title-wrap {
     display: flex;
     justify-content: center;
+    margin-bottom: 1px;
   }
   .title-logo-big {
     height: 180px;
@@ -160,7 +161,7 @@
 <option value="white_wool">白の羊毛</option>
 <option value="white_carpet">白色のカーペット</option>
 
-<!-- 武器 -->
+<!-- 武器（数量なし） -->
 <option disabled>―― 武器 ――</option>
 <option value="diamond_sword">ダイヤの剣</option>
 <option value="trident">トライデント</option>
@@ -169,7 +170,7 @@
 <option value="bow">弓</option>
 <option value="crossbow">クロスボウ</option>
 
-<!-- ツール -->
+<!-- ツール（数量なし） -->
 <option disabled>―― ツール ――</option>
 <option value="brush">ブラシ</option>
 <option value="spyglass">望遠鏡</option>
@@ -181,7 +182,7 @@
 <option value="iron_pickaxe">鉄のツルハシ</option>
 <option value="iron_shovel">鉄のシャベル</option>
 
-<!-- 防具 -->
+<!-- 防具（数量なし） -->
 <option disabled>―― 防具 ――</option>
 <option value="elytra">エリトラ</option>
 <option value="shield">盾</option>
@@ -221,7 +222,7 @@
 <option value="name_tag">名札</option>
 <option value="book">本</option>
 
-<!-- 花火 -->
+<!-- 花火（数量1〜64） -->
 <option disabled>―― 花火 ――</option>
 <option value="firework_rocket_1">ロケット花火Lv1</option>
 <option value="firework_rocket_2">ロケット花火Lv2</option>
@@ -243,41 +244,49 @@
 </div>
 
 <script>
-// ▼ 数量が必要なアイテム
-const amountItems = [
-  "enchanted_golden_apple","golden_apple","cookie","cooked_beef","beetroot",
-  "beetroot_seeds","wheat","wheat_seeds","hay_block","baked_potato",
-  "cooked_porkchop","potato","carrot","cactus","cocoa_beans","melon",
-  "melon_seeds","pumpkin","pumpkin_seeds","dried_kelp","bread",
-
-  "amethyst_shard","gold_ingot","copper_ingot","diamond","iron_ingot",
-  "netherite_ingot","netherite_scrap","lapis_lazuli","redstone",
-
-  "oak_log","scaffolding","glass","ladder","white_wool","white_carpet",
-
-  "arrow","snowball",
-  
-  "bucket","milk_bucket","water_bucket","lava_bucket",
-
-  "torch","coal","sugar_cane","hay_block","book"
-];
-
 function toggleAmount() {
   const item = document.getElementById("itemSelect").value;
 
+  const amountItems = [
+    "enchanted_golden_apple","golden_apple","cookie","cooked_beef","beetroot","beetroot_seeds",
+    "wheat","wheat_seeds","hay_block","baked_potato","cooked_porkchop","potato","carrot","cactus",
+    "cocoa_beans","melon","melon_seeds","pumpkin","pumpkin_seeds","dried_kelp","bread",
+
+    "amethyst_shard","gold_ingot","copper_ingot","diamond","iron_ingot",
+    "netherite_ingot","netherite_scrap","lapis_lazuli","redstone",
+
+    "oak_log","scaffolding","glass","ladder","white_wool","white_carpet",
+
+    "arrow","snowball",
+
+    "bucket","milk_bucket","water_bucket","lava_bucket",
+
+    "torch","coal","sugar_cane","hay_block","book",
+
+    "firework_rocket_1","firework_rocket_2","firework_rocket_3"
+  ];
+
+  // エンダーパール → 1〜16
   if (item === "ender_pearl") {
     amountBox.style.display = "block";
     amount.max = 16;
-  } else if (amountItems.includes(item)) {
+    return;
+  }
+
+  // 数量ありアイテム（1〜64）
+  if (amountItems.includes(item)) {
     amountBox.style.display = "block";
     amount.max = 64;
-  } else {
-    amountBox.style.display = "none";
+    return;
   }
+
+  // 武器 / ツール / 防具 → 数量なし
+  amountBox.style.display = "none";
 }
 
 function generateItem() {
-  const item = itemSelect.value;
+  const item = document.getElementById("itemSelect").value;
+
   let maxVal = (item === "ender_pearl") ? 16 : 64;
   const num = Math.min(Math.max(parseInt(amount.value||1),1),maxVal);
 
@@ -290,7 +299,7 @@ function generateItem() {
 
   switch(item){
 
-    /* 食べ物 / 消耗品 */
+    /* ▼ 数量アイテム */
     case "enchanted_golden_apple": cmd = `/give @p enchanted_golden_apple ${num}`; break;
     case "golden_apple": cmd = `/give @p golden_apple ${num}`; break;
     case "cookie": cmd = `/give @p cookie ${num}`; break;
@@ -299,15 +308,12 @@ function generateItem() {
     case "beetroot_seeds": cmd = `/give @p beetroot_seeds ${num}`; break;
     case "wheat": cmd = `/give @p wheat ${num}`; break;
     case "wheat_seeds": cmd = `/give @p wheat_seeds ${num}`; break;
-
     case "hay_block": cmd = `/give @p hay_block ${num}`; break;
     case "baked_potato": cmd = `/give @p baked_potato ${num}`; break;
     case "cooked_porkchop": cmd = `/give @p cooked_porkchop ${num}`; break;
-
     case "potato": cmd = `/give @p potato ${num}`; break;
     case "carrot": cmd = `/give @p carrot ${num}`; break;
     case "cactus": cmd = `/give @p cactus ${num}`; break;
-
     case "cocoa_beans": cmd = `/give @p cocoa_beans ${num}`; break;
     case "melon": cmd = `/give @p melon ${num}`; break;
     case "melon_seeds": cmd = `/give @p melon_seeds ${num}`; break;
@@ -316,7 +322,6 @@ function generateItem() {
     case "dried_kelp": cmd = `/give @p dried_kelp ${num}`; break;
     case "bread": cmd = `/give @p bread ${num}`; break;
 
-    /* 素材 / 鉱石 */
     case "amethyst_shard": cmd = `/give @p amethyst_shard ${num}`; break;
     case "gold_ingot": cmd = `/give @p gold_ingot ${num}`; break;
     case "copper_ingot": cmd = `/give @p copper_ingot ${num}`; break;
@@ -327,7 +332,6 @@ function generateItem() {
     case "lapis_lazuli": cmd = `/give @p lapis_lazuli ${num}`; break;
     case "redstone": cmd = `/give @p redstone ${num}`; break;
 
-    /* 木材 / ブロック */
     case "oak_log": cmd = `/give @p oak_log ${num}`; break;
     case "scaffolding": cmd = `/give @p scaffolding ${num}`; break;
     case "glass": cmd = `/give @p glass ${num}`; break;
@@ -335,18 +339,33 @@ function generateItem() {
     case "white_wool": cmd = `/give @p white_wool ${num}`; break;
     case "white_carpet": cmd = `/give @p white_carpet ${num}`; break;
 
-    /* 武器（単体） */
+    case "arrow": cmd = `/give @p arrow ${num}`; break;
+    case "snowball": cmd = `/give @p snowball ${num}`; break;
+
+    case "bucket": cmd = `/give @p bucket ${num}`; break;
+    case "milk_bucket": cmd = `/give @p milk_bucket ${num}`; break;
+    case "water_bucket": cmd = `/give @p water_bucket ${num}`; break;
+    case "lava_bucket": cmd = `/give @p lava_bucket ${num}`; break;
+
+    case "torch": cmd = `/give @p torch ${num}`; break;
+    case "coal": cmd = `/give @p coal ${num}`; break;
+    case "sugar_cane": cmd = `/give @p sugar_cane ${num}`; break;
+
+    case "book": cmd = `/give @p book ${num}`; break;
+
+    /* ▼ 花火（数量あり） */
+    case "firework_rocket_1": cmd = `/give @p firework_rocket{Fireworks:{Flight:1}} ${num}`; break;
+    case "firework_rocket_2": cmd = `/give @p firework_rocket{Fireworks:{Flight:2}} ${num}`; break;
+    case "firework_rocket_3": cmd = `/give @p firework_rocket{Fireworks:{Flight:3}} ${num}`; break;
+
+    /* ▼ 数量なしアイテム（武器・防具・ツールなど） */
     case "diamond_sword": cmd = `/give @p diamond_sword`; break;
-    case "trident": cmd = `/give @p trident`; break;
     case "iron_sword": cmd = `/give @p iron_sword`; break;
     case "mace": cmd = `/give @p mace`; break;
+    case "trident": cmd = `/give @p trident`; break;
     case "bow": cmd = `/give @p bow`; break;
     case "crossbow": cmd = `/give @p crossbow`; break;
 
-    /* ツール（単体） */
-    case "brush": cmd = `/give @p brush`; break;
-    case "spyglass": cmd = `/give @p spyglass`; break;
-    case "flint_and_steel": cmd = `/give @p flint_and_steel`; break;
     case "diamond_axe": cmd = `/give @p diamond_axe`; break;
     case "diamond_pickaxe": cmd = `/give @p diamond_pickaxe`; break;
     case "diamond_shovel": cmd = `/give @p diamond_shovel`; break;
@@ -354,51 +373,39 @@ function generateItem() {
     case "iron_pickaxe": cmd = `/give @p iron_pickaxe`; break;
     case "iron_shovel": cmd = `/give @p iron_shovel`; break;
 
-    /* 防具（単体） */
-    case "elytra": cmd = `/give @p elytra`; break;
     case "shield": cmd = `/give @p shield`; break;
+    case "elytra": cmd = `/give @p elytra`; break;
     case "diamond_helmet": cmd = `/item replace entity @p armor.head with diamond_helmet`; break;
     case "diamond_chestplate": cmd = `/item replace entity @p armor.chest with diamond_chestplate`; break;
     case "diamond_leggings": cmd = `/item replace entity @p armor.legs with diamond_leggings`; break;
     case "diamond_boots": cmd = `/item replace entity @p armor.feet with diamond_boots`; break;
 
-    /* 弾系 */
-    case "arrow": cmd = `/give @p arrow ${num}`; break;
-    case "snowball": cmd = `/give @p snowball ${num}`; break;
+    case "brush": cmd = `/give @p brush`; break;
+    case "spyglass": cmd = `/give @p spyglass`; break;
+    case "flint_and_steel": cmd = `/give @p flint_and_steel`; break;
 
-    /* バケツ系 */
-    case "axolotl_bucket": cmd = `/give @p axolotl_bucket`; break;
-    case "bucket": cmd = `/give @p bucket ${num}`; break;
-    case "milk_bucket": cmd = `/give @p milk_bucket ${num}`; break;
-    case "water_bucket": cmd = `/give @p water_bucket ${num}`; break;
-    case "lava_bucket": cmd = `/give @p lava_bucket ${num}`; break;
+    case "ender_chest": cmd = `/give @p ender_chest`; break;
+    case "shulker_box": cmd = `/give @p shulker_box`; break;
+    case "name_tag": cmd = `/give @p name_tag`; break;
 
-    /* 移動 */
     case "oak_boat": cmd = `/give @p oak_boat`; break;
     case "lead": cmd = `/give @p lead`; break;
     case "saddle": cmd = `/give @p saddle`; break;
-    case "compass": cmd = `/give @p compass`; break;
     case "map": cmd = `/give @p map`; break;
+    case "compass": cmd = `/give @p compass`; break;
     case "clock": cmd = `/give @p clock`; break;
 
-    /* 特殊 / その他 */
-    case "ender_chest": cmd = `/give @p ender_chest`; break;
-    case "command_block": cmd = `/give @p command_block`; break;
-    case "shulker_box": cmd = `/give @p shulker_box`; break;
-    case "name_tag": cmd = `/give @p name_tag`; break;
-    case "book": cmd = `/give @p book ${num}`; break;
+    case "axolotl_bucket": cmd = `/give @p axolotl_bucket`; break;
 
-    /* 花火 */
-    case "firework_rocket_1": cmd = `/give @p firework_rocket{Fireworks:{Flight:1}}`; break;
-    case "firework_rocket_2": cmd = `/give @p firework_rocket{Fireworks:{Flight:2}}`; break;
-    case "firework_rocket_3": cmd = `/give @p firework_rocket{Fireworks:{Flight:3}}`; break;
+    /* ▼ 特殊ケース */
+    case "ender_pearl": cmd = `/give @p ender_pearl ${num}`; break;
   }
 
-  output.textContent = cmd;
+  document.getElementById("output").textContent = cmd;
 }
 
 function copyCommand(){
-  const text = output.textContent;
+  const text = document.getElementById("output").textContent;
   if (!text) return;
   const temp = document.createElement("textarea");
   temp.value = text;
